--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<has-interpolation-binding>
-    
-</has-interpolation-binding>
+<!--<has-interpolation-binding>
+
+</has-interpolation-binding>-->
+<has-property-binding>
+  
+</has-property-binding>
