--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <!--<has-interpolation-binding>
 
 </has-interpolation-binding>-->
-<has-property-binding>
+
+<!-- <has-property-binding>
+
+</has-property-binding> -->
+
+<has-two-way-binding>
   
-</has-property-binding>
+</has-two-way-binding>
