--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,10 @@
 
 </has-property-binding> -->
 
-<has-two-way-binding>
+<!-- <has-two-way-binding>
+
+</has-two-way-binding> -->
+
+<has-ng-if>
   
-</has-two-way-binding>
+</has-ng-if>
