--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,10 @@
 
 </has-two-way-binding> -->
 
-<has-ng-if>
+<!-- <has-ng-if>
+
+</has-ng-if> -->
+
+<has-ng-switch-case>
   
-</has-ng-if>
+</has-ng-switch-case>
